# data_collect_ws

./: .gitignore  .gitmodules  launch_all.md  setup_step.txt
src/ur_pose_tracking/: CMakeLists.txt  package.xml
src/ur_pose_tracking/src/: ur_pose_tracking.cpp
ubuntu22.04_ros2/: Dockerfile  Dockerfile_lerobot  Dockerfile_lerobot copy  build_lerobot_env.sh  gr00t_pyproject.toml  lerobot.Dockerfile  run_lerobot_env.sh
ubuntu22.04_ros2/config/pip/: requirements.txt
